--- a/infrastructure/Makefile
+++ b/infrastructure/Makefile
@@ -1,4 +1,3 @@
-# Infrastructure Makefile - управление общими сервисами
 include .env
 export
 
@@ -26,10 +25,10 @@ help:
 	@echo "  https://pma.shared.local        - phpMyAdmin (если запущена общая БД)"
 	@echo "  https://mail.local              - MailHog (если запущен)"
 
-# Инициализация (создание сетей)
+# Инициализация
 init: clean-networks networks up-traefik up-shared-db info
 
-# Создание внешних сетей (с правильной очисткой)
+# Создание внешних сетей
 networks:
 	@echo "🌐 Создание внешних Docker сетей..."
 	@echo "🧹 Очистка существующих сетей..."
