--- a/projects/project-template/.env.example
+++ b/projects/project-template/.env.example
@@ -1,8 +1,4 @@
-# ===============================================
-# НАСТРОЙКИ ПРОЕКТА
-# ===============================================
-
-# Название проекта (уникальное!)
+# Название проекта
 PROJECT_NAME=project1
 
 # Основной домен
@@ -16,29 +12,23 @@ WEB_SERVER=apache
 
 # Версии
 PHP_VERSION=8.1
-NODE_VERSION=18
 
 # Временная зона
 TIMEZONE=Europe/Moscow
 
 # Использование общих сервисов
-USE_SHARED_DB=true
-USE_SHARED_REDIS=true
-USE_SHARED_MAILHOG=true
+USE_SHARED_SERVICES=true
 
-# Настройки подключения к общей БД (если USE_SHARED_DB=true)
+# MariaDB
 SHARED_DB_HOST=infrastructure-mariadb
-SHARED_DB_ROOT_PASSWORD=shared_root_password_2024
-
-# Создание собственной БД в общей MariaDB
 DB_NAME=project1_db
 DB_USER=project1_user
-DB_PASSWORD=project1_password_2024
+DB_PASSWORD=project1_password
 
-# Настройки подключения к общему Redis (если USE_SHARED_REDIS=true)
+# Redis
 SHARED_REDIS_HOST=infrastructure-redis
 SHARED_REDIS_PORT=6379
 
-# Настройки MailHog (если USE_SHARED_MAILHOG=true)
+# MailHog
 SHARED_MAILHOG_HOST=infrastructure-mailhog
 SHARED_MAILHOG_PORT=1025
