--- a/infrastructure/.env.example
+++ b/infrastructure/.env.example
@@ -1,27 +1,27 @@
-# ===============================================
-# ИНФРАСТРУКТУРНЫЕ НАСТРОЙКИ (ОБЩИЕ СЕРВИСЫ)
-# ===============================================
-
-# Название инфраструктуры (префикс для контейнеров)
+# Название инфраструктуры
 INFRA_NAME=infrastructure
 
-# Настройки Traefik
+# phpmyadmin
+PMA_ABSOLUTE_URI=pma.shared.local
+#PMA_ABSOLUTE_URI=SERVER_IP:8080
+
+# Traefik
 TRAEFIK_DASHBOARD_PORT=8080
 ACME_EMAIL=admin@example.com
 HTTP_PORT=80
 HTTPS_PORT=443
 
-# Настройки общей MariaDB (если используется)
+# MariaDB
 SHARED_MARIADB=true
-SHARED_DB_ROOT_PASSWORD=shared_root_password_2024
+SHARED_DB_ROOT_PASSWORD=shared_root_password
 SHARED_DB_PORT=3306
 
-# Настройки общего Redis (если используется)  
-SHARED_REDIS=true
+# Redis
+SHARED_REDIS=false
 SHARED_REDIS_PORT=6379
 
-# Настройки MailHog (для тестирования email)
-MAILHOG_ENABLED=true
+# MailHog
+MAILHOG_ENABLED=false
 MAILHOG_HTTP_PORT=8025
 MAILHOG_SMTP_PORT=1025
 
