--- a/projects/project-template/.env.example
+++ b/projects/project-template/.env.example
@@ -21,6 +21,8 @@ USE_SHARED_SERVICES=true
 
 # MariaDB
 SHARED_DB_HOST=infrastructure-mariadb
+SHARED_DB_ROOT_PASSWORD=shared_root_password
+
 DB_NAME=project1_db
 DB_USER=project1_user
 DB_PASSWORD=project1_password
